--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="css/style.css">
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">-->
+<!--  <link rel="stylesheet" href="css/style.css">-->
   <title>Title</title>
 </head>
 <body>
@@ -29,6 +29,6 @@
   <div class="field"></div>
 </div>
 
-<script src=js/script.js></script>
+<!--<script src=js/script.js></script>-->
 </body>
 </html>
