--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <span id="lives">Жизни:</span>
   <br>
   <span id="points">Баллы:</span>
+  <br>
+  <span id="best"></span>
   <div class="current-level"></div>
   <div class="field"></div>
 </div>
