save best scores in local storage

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <span id="points">Баллы:</span>
   <br>
   <span id="best"></span>
+  <button hidden id="best-reset">Сброс</button>
   <div class="current-level"></div>
   <div class="field"></div>
 </div>
